# 2048

./: .gitignore  README.md  benchmark.py  game.py  heuristics.py  main.py  pyproject.toml  search.py  utils.py
playbook/: __init__.py  cli.py  registry.py
playbook/browser/: gamectrl.py
playbook/browser/chrome/: chromectrl.py
playbook/evaluation/: __init__.py  compare.py  evaluate.py  report.py  runner.py
playbook/game/: __init__.py  board.py  env.py  rules.py
playbook/heuristics/: __init__.py  combined.py  features.py  gradients.py
playbook/strategies/: __init__.py  base.py
playbook/strategies/baselines/: __init__.py  greedy.py  manual.py  random.py
playbook/strategies/learning/: README.md  __init__.py
playbook/strategies/learning/reinforcement/: README.md  __init__.py
playbook/strategies/learning/reinforcement/deep/: README.md  __init__.py  dqn.py  networks.py
playbook/strategies/learning/supervised/: __init__.py  imitation.py
playbook/strategies/optimization/: README.md  __init__.py  genetic.py
playbook/strategies/search/: README.md  __init__.py  base.py  expectimax.py  maximization.py  mcts.py  minimax.py
results/: eager.txt  maximization.txt  minimax.txt  random.txt
results/new/: eager_100.txt  expectimax_10_d3.txt  maximization_10_d3.txt  maximization_10_d4.txt  mcs_10_r30.txt  mcs_tests.txt  mcs_tests_new_tile.txt  minimax_10_d3.txt  minimax_10_d4.txt  minimax_10_d5.txt  random_100.txt
tests/: _gen_golden.py  test_board.py  test_env.py  test_strategies.py
tests/fixtures/: moves.json
(+4 files in other folders)
